--- a/index.html
+++ b/index.html
@@ -684,7 +684,15 @@ let state = {
     '6-401811930': { golfer: 'Chris Gotterup', earnings: null, position: null },
     '6-401811931': { golfer: 'Ben Griffin', earnings: null, position: null },
     '6-401811932': { golfer: 'Tommy Fleetwood', earnings: null, position: null },
-    '6-401811933': { golfer: 'Si Woo Kim', earnings: null, position: null }
+    '6-401811933': { golfer: 'Si Woo Kim', earnings: null, position: null },
+
+    '0-401811934': { golfer: 'Christiaan Bezuidenhout', earnings: null, position: null },
+    '1-401811934': { golfer: 'Eric Cole', earnings: null, position: null },
+    '2-401811934': { golfer: 'Aaron Rai', earnings: null, position: null },
+    '3-401811934': { golfer: 'Shane Lowry', earnings: null, position: null },
+    '4-401811934': { golfer: 'Shane Lowry', earnings: null, position: null },
+    '5-401811934': { golfer: 'Aaron Rai', earnings: null, position: null },
+    '6-401811934': { golfer: 'Shane Lowry', earnings: null, position: null }
   },
   scoredTournaments: []
 };
